Change Log

All notable changes to this project will be documented in this file.

[1.0.3] - 23/11/2023
Added
    - Added variable session to simulate saved session
Changed

Fixed


[1.0.2] - 22/11/2023
Added
    - Console Application for User Menu
    - Password for User account's creation
    - Password Hashing for security
    - User information during creation is successfully added to mySQL database
    - User login now extract information from mySQL database for authentication
    - User login now compares hashed password
    - Show userType based menu (Passenger or Car Owner)
Changed

Fixed
    - SignUp handler not saving into information into mySQL database

[1.0.1] - 21/11/2023
Added
    trip-service MAJOR Init main.go
    trip-models PATCH Add Trip and Reservation structure models
    user-models PATCH Add Passenger and CarOwner structure models
    user-handlers PATCH Add handlers to respond HTTP requesst, interacting with the database

    - Import database in main to call 'InitializeDatabase' func
    - Able to now POST to database and create new user
    - Able to now GET user from database to list all users
    - Able to now GET user by ID from database to list all users
    
Changed

Fixed
    user-service & trip-service PATCH Add 'go work init' to FIX 'gopls' error message

[1.0.0] - 10/11/2023
Added
    user-service MAJOR Init main.go

Changed

Fixed






Sample:
Here we would have the update steps for 1.2.4 for people to follow.
Added

Changed
    PROJECTNAME-ZZZZ PATCH Drupal.org is now used for composer.

Fixed
    PROJECTNAME-TTTT PATCH Add logic to runsheet teaser delete to delete corresponding schedule cards.

MINOR
PATCH
MAJOR